<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main">Click incomplete habits (red) to complete them</string>
    <string name="view">All Habits</string>
    <string name="add">Add Habit</string>
    <string name="app_name">tommy3-HabitTracker</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="daily">Daily</string>
    <string name="mon">Mondays</string>
    <string name="tue">Tuesdays</string>
    <string name="wed">Wednesdays</string>
    <string name="thu">Thursdays</string>
    <string name="fri">Fridays</string>
    <string name="sat">Saturdays</string>
    <string name="sun">Sundays</string>
    <string name="enterName">Enter a name for the habit:</string>
    <string name="selectDays">Which days should the habit occur on?</string>
    <string name="date">Habit entry date:</string>
    <string name="back">Return</string>
    <string name="viewCompletions">View Completions</string>
    <string name="delete">Delete Habit</string>
    <string name="deleteCompletion">Delete selected completion</string>

</resources>