<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enterName"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.23" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/selectDays"
        android:id="@+id/textView3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon"
        android:id="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        android:id="@+id/checkBox5" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:id="@+id/checkBox7" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        android:id="@+id/checkBox6" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        android:id="@+id/checkBox4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:id="@+id/checkBox3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:id="@+id/checkBox2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.58" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:weightSum="1"
        android:background="@android:color/background_dark"
        android:baselineAligned="false">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="79dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:id="@+id/button"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/background_light"
            android:layout_weight="0.06"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="0.43"
            android:background="@android:color/background_dark" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="79dp"
            android:layout_height="40dp"
            android:text="@string/save"
            android:id="@+id/button2"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/background_light"
            android:layout_weight="0.06"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>